shared21/style.css
/* higher contrast settings */
body.contrast #chardata, 
body.contrast #autofocusswitch, 
body.contrast .hint, 
body.contrast summary,
body.contrast #phonemelist span {
	color:rgba(125,58,33,1.00);
	}

body.app #sitelinks { 
	margin-bottom: 2em;
	}

h1 {
	margin-left: 30px;
	margin-top: 0;
	padding-left: 0;
	}
.versionnumber { 
	font-size: 50%; 
	margin-left: 10px; 
	}

table, tr, td, th { font-size: 100%; }
#tables td { white-space:nowrap; }

table td { border: 0; }

#hidePageTop {
	font-size: 80%;
	text-align: center;
	clear: both;
	margin: 0 32% 10px 0;
	font-style: italic;
	font-family: robotolight;
	}

#topControls {
	margin: 0 10px 0 15px;
	}
#outputDiv {
	margin: 5px 20px 0 20px; 
	}
#output { 
	border: 1px solid #ccc; 
	width: 100%; 
	border-radius: 5px;
	padding: 2px 5px;
	}

#transcriptionWrapper {
	position: relative;
	display: none;
	}
#closeTranscription {
	position: fixed; 
	bottom: 0; 
	right: 0;
	margin-right: 20px;
	font-size: 28px;
	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
	cursor: pointer;
	}
#moveTranscription {
	position: absolute; 
	bottom: 0; 
	right: 40px;
	margin-right: 20px;
	font-size: 28px;
	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
	cursor:pointer;
	color: #ccc;
	}
#transcription {
	margin: 5px 25px 10px;
	font-size: 28px;
	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
	/* border-bottom: 1px solid #ccc; */
	color: #C33;
	text-align: left;
	}
.altfirst {
	border: 1px solid #ccc;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	background-color: #fffacd;
	cursor:pointer;
	}
.altlast {
	border: 1px solid #ccc;
	border-left: 0;
	border-top-right-radius: 5px;
	border-bottom-right-radius: 5px;
	cursor:pointer;
	background-color: #fffacd;
	}
.alt {
	border: 1px solid #ccc;
	border-left: 0;
	cursor:pointer;
	background-color: #fffacd;
	}
#closeTranscription {
	position: absolute; 
	bottom:0; 
	right:0;
	color: #ccc;
	font-family: sans-serif;
	cursor: pointer;
	}


#phonemelist {
	margin: 0 10px 3px 25px;
	margin: 0 15px 3px 15px;
	line-height: 1.2;
	padding-left: 5px;
	}
#phonemelist span {
	cursor: pointer;
	font-family: "Doulos Sil", Gentium, "Gentium Plus", "Charis SiL", "Arial Unicode MS", sans-serif;
	font-size: 24px; 
	color: #aaa;
	min-width: 10px; 
	display: inline-block;
	text-align: center;
	padding: 1px;
	}
#phonemelist span:hover {
	background-color: rgb(192,255,131);
	border-radius: 5px;
	}

.transcript {
	border-bottom: 1px solid #f0a467; 
	border-radius: 10px; 
	padding: 10px;
	margin-bottom: 8px;
	}

#phondatabank {
	margin-right: 2px;
	float: right;
	line-height: 1;
	}
#phondatabank input {
	border-radius: 10px;
	background-color: #ffe;
	border: 1px solid #CCC; 
	}
#phondatabank button {
	background-color:#ffe; 
	padding: 2px; 
	border: 1px solid #CCC; 
	border-radius: 10px; 
	}


#chardata { 
	/* clear:both; */
	margin-left: 25px; 
	margin-right: 20px; 
	height: 1.2em; 
	color: #ccc;
	margin-bottom: 15px;
	}
#charname { 
	margin-left: 5px; 
	}


.hint {
	font-size: 14px;
	color: #ccc;
	text-align: center;
	vertical-align: top;
	font-family: "Noto Sans", Gentium, Gentium Plus, "Doulos SIL", "Charis SIL", "Arial Unicode MS", serif;
	display: inline-block;
	min-width: .75em;
	padding: 3px 0;
	}
.g:hover .hint {
	font-weight: normal;
	background-color:rgba(244,99,11,1.00);
	background-color:rgba(255,204,102,1.00);
	color: white;
	color: brown;
	border-radius: 3px;
	}



#vertical-menu {
	position: absolute; 
	color: white; 
	z-index: 1000; 
	padding: 4px;
	background-color:#666;
	margin-top: 10px;
	cursor:pointer;
	border-top-right-radius: 7px;
	border-bottom-right-radius: 7px;
	}
.vmtab {
	background-color:#666; 
	}


#tables {
	margin-left: 25px;
	}

span.c {
	border-radius: 3px;
	cursor: pointer;
	display: inline-block;
	}
span.c:hover {
	background-color: #CF9;
	border-radius: 3px;
	}

#toggleRare {
	font-size: 80%;
	cursor: pointer;
	color: #aaa;
	}

#shapelist img {
	cursor: pointer;
	}

#controls, #extracontrols {
	margin: 0 20px; 
	clear: both;
	}
#extracontrols details {
	clear: both;
	}
.control { 
	float:left; 
	padding: 2px 4px; 
	background-color: #FFFACD; 
	border: 1px solid #ccc; 
	margin-right: 2px; 
	margin-bottom: 4px; 
	border-radius: 5px; 
	margin-top: 8px;
	font-size: 15px;
	line-height: 1.2;
	height: 2.6em;
	}
#showMoreControls {
	margin: 0;
	margin-left: 2px;
	font-size: 80%;
	cursor: pointer;
	}

#showNotes {
	margin: 5px 20px;
	margin-left: 22px;
	font-size: 80%;
	cursor: pointer;
	clear: both;
	}

#notes {
	padding: 10px;
	padding-right: 30px;
	font-size: 80%;
	margin-left: 10px;
	margin-top: 15em;
	clear:both; 
	}


#panel { 
	position: fixed; 
	bottom: 20px; 
	right: 10px; 
	padding: 0.5em; 
	width: 26%; 
	background-color:#ffe; 
	border: 1px solid #CCC; 
	box-shadow: 7px 7px 5px #888; 
	padding: 5px 10px 5px 15px; 
	border-radius: 10px; 
	z-index:2000;
	width: 28%;
	font-size: 80%;
	text-align: left;
	text-align: start;
	max-height: 80%;
	overflow: auto;
	}
#panel img { vertical-align: middle; }
#panel p { margin: 0; margin-top: 3px; }
#panel #title { 
	font-size: 200%; 
	color: #F00;
	}


.smallprint {
	min-height: 800px;
	vertical-align: bottom;
	text-align: right;
	margin-right: 20px; 
	}
#version {
	border-top-left-radius: 8px;
	}
	

 #keyboard { 
 	padding-bottom: 10px; 
	margin-bottom: 50px;
	}
 .keyboardrow {
	 white-space: nowrap;
	 clear: both;
 	}
.key { 	
	height: 36px; 
	width: 65px;	
	text-align: right; 
	position: relative; 
	float: left;
	border: 1px solid #AAA;
	margin: 2px; 
	box-shadow: 2px 2px 5px #888;
	border-radius: 4px;
	padding-right: 2px;
	}
.key .kg { 
	/*float: left; */
	position: absolute;
	top: 0;
	left: 0;
	margin-left: 2px; 
	font-size: 12px; 
	text-transform: uppercase; 
	color: orange; 
	}
/*.key span { max-height: 20px; max-width:26px; }*/
.k { padding: 0 5px; }
.key .k1 { display: inline-block; min-width: 70%; text-align: center; vertical-align: middle; border-radius: 4px; }
.key .k2 { display: inline-block; min-width: 35%;  text-align: center; vertical-align: middle; border-radius: 4px; }
.key .k3 { display: inline-block; min-width: 15%;  text-align: center; vertical-align: middle; border-radius: 4px; }


#autofocusswitch {
	float: right; 
	font-size: 80%; 
	margin-right: 20px;
	color: #aaa;
	margin-left: 40px;
	}
.on { border-bottom: 1px solid #aaa; }
#afon, #afoff { cursor: pointer; }

dt {
	color: #F60;
	}

#transcriptionChoice {
	position:absolute;
	left:40px; 
	font-size: 60px; 
	background-color: #FFFACD; 
	border: 1px solid #ccc; 
	border-radius:10px; 
	padding: 7px;
	display: none;
	}
#transcriptionChoice bdi {
	cursor: pointer;
	}

#shapelist {
    text-align: center;
    cursor: pointer;
	display: none;
}
#shapekeys {
    color: orange;
}

#tools {
	float:right; 
	vertical-align:bottom; 
	font-size: 80%;
	}
#tools span {
	cursor:pointer; 
	display: inline-block; 
	line-height:1;
	text-align:center;
	padding: 1px;
	border-radius: 5px;
	}
#tools button {
	cursor:pointer; 
	display: inline-block; 
	line-height:1;
	text-align:center;
	padding: 1px;
	border-radius: 5px;
	border: 0;
	background-color: white;
	box-shadow: none;
	font-size: 100%;
	color: gray;
	margin: 0;
	margin-right: .5em;
	border: 1px solid white; 
	}
#tools button:hover {
	color: #c33;
	}
/*#tools button:hover {
	border: 1px solid #ccc; 
	background-color: #FFFFD2;
	color: #666;
	box-shadow: 2px 2px 5px #888, -2px -2px 5px #888;
	}*/
#copydelete button {
	padding-right: 0em; 
	cursor:pointer;
	text-shadow: 1px 1px 2px #555;
	font-size: 90%;
	background-color: white;
	box-shadow: none;
	font-size: 100%;
	border: 0;
	margin-right: 0;
	}
.optionTrigger {
	background-color: white;
	border-radius: 2px;
	padding: 0 4px;
	color: #999;
	cursor: pointer;
	}
.optionTrigger:hover {
	/*background-color: #FFFFC7;
	border-radius: 2px;
	padding: 0 4px;
	color: #666;*/
	color: #c33;
	}
#copyTranscription {
	position: absolute; 
	bottom: 0; 
	right: 80px;
	margin-right: 20px;
	font-size: 26px;
	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
	cursor:pointer;
	color: #ccc;
	}
#transcription {
	margin: 5px 140px 10px 25px;
	font-size: 28px;
	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
	color: #C33;
	text-align: left;
	}

#output::selection {
	background-color: #F5A806;
    color: #fff;
	}
#output::-moz-selection {
	background-color: #F5A806;
    color: #fff;
	}

.shifted {
	margin: 5px; 
	border: 1px solid #ccc; 
	border-radius: 10px;
	background-color: #ccc;
	color: white;
	font-family: 'helvetica neue', roboto, calibri, helvetica, sans-serif; 
	font-size: 14px; 
	padding: 5px 10px; 
	text-align: center; 
	text-transform: uppercase; 
	vertical-align:middle; 
	display: inline;
	}
.unshifted {
	margin: 5px; 
	border: 1px solid #ccc; 
	border-radius: 10px;
	background-color: white;
	font-family: 'helvetica neue', roboto, calibri, helvetica, sans-serif; 
	font-size: 14px; 
	padding: 5px 10px; 
	text-align: center; 
	text-transform: uppercase; 
	vertical-align:middle; 
	display: inline;
	}
	
	
.spaceEtc {
	margin: 5px; 
	border: 1px solid #eee; 
	font-family: 'helvetica neue', roboto, calibri, helvetica, sans-serif; 
	font-size: 14px; 
	padding: 5px; 
	text-align: center; 
	text-transform: uppercase; 
	vertical-align:middle; 
	display: inline;
	cursor: pointer;
	}
	
	
summary { 
	font-size: 80%;
	background-color: white;
	border-radius: 2px;
	padding: 0 4px;
	color: #999;
	cursor: pointer;
	}
summary:hover {
	color: #c33;
	}

/*
#copydelete button:last-of-type {
	margin-left: 1.5em;
	}
*/
#copydelete img {
	vertical-align: top;
	}
	
#pickerlist {
	border: 0;
	width: 90%;
	height: 8em;
	}
	
#scriptlinks {
    font-size: 80%;
    background-color: white;
    border-radius: 2px;
    padding: 0 4px;
    color: #999;
    cursor: pointer;
    float: right;
	}
	
#temp span { padding: 1em; border: 3px solid teal; line-height: 6em; }
	
	
.touch { /* these are space, rlm, etc touches */
	margin: 0 5px; 
	border: 1px solid #ddd; 
	border-radius: 3px;
	font-family: 'helvetica neue', roboto, calibri, helvetica, sans-serif; 
	font-size: 14px; 
	padding: 5px; 
	text-align: center; 
	text-transform: uppercase; 
	vertical-align:middle; 
	display: inline-block;
	cursor: pointer;
	line-height: 1;
	}
.delAll { /* special border for delete all touch */
	border: 1px solid #eee; 
	}
.setDir {
	cursor: pointer;
	}

#helpcontrol {
	text-align:center; 
	color: white; 
	background-color: #60ADFB; 
	cursor: pointer;
	}
#helpcontrol a {
	color: white;
	}
#helpcontrol a:hover {
	color: white;
	background-color: transparent;
	}
#helpcontrol img {
	vertical-align: baseline;
	}

#kbd #vowels {
	padding: 0 10px;
	}

#contrastSwitch {
	float: right;
	}
#rare {
	margin: auto;
	}


#linkstable {
    font-size: 80%;
    margin: 0 3em;
    }
#linkstable table {
    margin: 0;
    }
#linkstable td {
    text-align: start;
    padding: 0 1em 0 0;
    }
#linkstable th {
    vertical-align: top;
    text-align: start;
    padding: 0 1em 0 0;
    }
#linkstable p {
    margin:0;
    padding:0;
    }
#extrashapes {
    text-align: center;
    }
.kbdWrapper {
    display: flex;
    align-items: center;
    flex-direction: column;
    flex-wrap: nowrap;
    }


.mirrorRTL {
	transform: rotateY(180deg);
	}
.bdoRTL {
	direction: rtl; 
	unicode-bidi: bidi-override;
	}
.bdoLTR {
	direction: ltr; 
	unicode-bidi: bidi-override;
	}

